<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright 2021. Huawei Technologies Co., Ltd. All rights reserved.
  ~  *
  ~  *    Licensed under the Apache License, Version 2.0 (the "License");
  ~  *    you may not use this file except in compliance with the License.
  ~  *    You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  *    Unless required by applicable law or agreed to in writing, software
  ~  *    distributed under the License is distributed on an "AS IS" BASIS,
  ~  *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *    See the License for the specific language governing permissions and
  ~  *    limitations under the License.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.huawei.hms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:cameraTargetLat="51"
            map:cameraTargetLng="10"
            map:cameraZoom="8.5"
            map:mapType="normal"
            map:uiCompass="true"
            map:uiZoomControls="true" />
        <ImageView
            android:id="@+id/customPickDestination"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_pickup_marker"
            />

        <ImageView
            android:id="@+id/customCurrentLocation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_currentlocation"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:background="@color/hiad_transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pickUpLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pickup_loc"
                android:ellipsize="end"
                android:maxLines="1"
                android:background="@drawable/round_border_edittext"
                android:padding="10dp"
                app:drawableStartCompat="@drawable/ic_green_circle" />


            <TextView
            android:id="@+id/dropLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/drop_loc"
            android:ellipsize="end"
            android:maxLines="1"
                android:background="@drawable/round_border_edittext"
            android:padding="10dp"
                app:drawableStartCompat="@drawable/ic_red_circle" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bookingRecylerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:paddingTop="0dp"
                        android:paddingBottom="0dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginLeft="0dp"
                        android:background="@android:color/darker_gray"
                        android:visibility="gone"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cabTypeRecylerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:paddingLeft="0dp"
                        android:paddingBottom="0dp"
                        android:paddingTop="5dp"
                        android:paddingRight="0dp" />

                    <Button android:id="@+id/confirmBooking"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:enabled="false"
                        android:text="@string/confirm_booking"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_bookingdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/tvModel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_model_name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:id="@+id/tvOtp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/otp"
                        android:textColor="@color/black"
                        android:background="@color/colorAccent"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="15sp"
                        />

                    <ImageView
                        android:id="@+id/img_drivercar"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/tvModel"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_driver_car"/>

                    <TextView
                        android:id="@+id/tvCabNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvModel"
                        android:layout_toEndOf="@+id/img_drivercar"
                        android:text="@string/cab_number"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp" />

                    <TextView
                        android:id="@+id/tvBookingType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvCabNumber"
                        android:layout_toEndOf="@+id/img_drivercar"
                        android:text="@string/bookingType"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="5dp" />

                    <ImageView
                        android:id="@+id/img_driver"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/tvModel"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_dummy_user"/>

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvModel"
                        android:layout_toStartOf="@+id/img_driver"
                        android:text="@string/drivername"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_below="@+id/tvName"
                        android:layout_toStartOf="@+id/img_driver"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            android:layout_width="33dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>